# recentrifuge

./: .gitattributes  .gitignore  .travis.yml  INSTALL.md  LICENSE.txt  MANIFEST.in  README.md  etree.py  etree_tax.py  ex_adv_enum.py  mypy_wrapper.sh  pyproject.toml  rcf  recentrifuge.py  refafilt  refasplit  regentrifuge.py  remock  remock.py  requirements.txt  retaxdump  retaxdump.py  retest  rextraccnt  rextract  rextract.py  rgf  setup.py  test_mypy_bug.py  test_mypy_mp.py
.github/: issue_template.md
.github/workflows/: retest.yaml
recentrifuge/: CentrifugeIO.py  LMAT.py  LmatIO.py  __init__.py  centrifuge.py  centrifuge_io.py  clark.py  config.py  core.py  fastq_io.py  gene_ontology.py  generic.py  go.py  kraken.py  krona-2.0.js  krona.js  krona.py  lmat.py  lmat_io.py  mock.py  ontology.py  params.py  rank.py  shared_counter.py  stats.py  taxclass.py  taxonomy.py  trees.py
recentrifuge/img/: logo-med.uri  logo-mini.uri  logo-rcf-mini.uri  logo-rgf-mini.uri
recentrifuge/test/: TEST.rcf.data.csv  TEST.rcf.html  TEST.rcf.stat.csv  TEST.rcf.txt  TEST.rcf.xlsx  mock.xlsx  smpl1.mck  smpl3.mck
test/: TEST.rcf.data.tsv  TEST.rcf.html  TEST.rcf.stat.tsv  TEST.rcf.txt  TEST.rcf.xlsx  ctrl1.mck  ctrl2.mck  ctrl3.mck  mock.xlsx  smpl2.mck
